--- a/BuoiTH2/baitap/bai_1/bai1.html
+++ b/BuoiTH2/baitap/bai_1/bai1.html
@@ -10,7 +10,7 @@
                 font-size: 40px;
                 font-style: italic;
                 font-weight: bold;
-                corlor: blue;
+                color: rgb(70, 70, 89);
             }
         </style>
         
