--- a/BuoiTH2/baitap/bai_7/bai7.html
+++ b/BuoiTH2/baitap/bai_7/bai7.html
@@ -19,7 +19,7 @@
                 <a href="bai7.html">Liên hệ</a>
             </div>
 
-            <div style="float: right; width: 800px;">
+            <div style="overflow: hidden;">
                 <marquee direction="left">
                     <font face="Arial" color="#ffffff"><b>Hoa tươi Long Xuyên kính chào quý khách, nhận đặt hoa cưới, sinh nhật, chúc mừng... Chúng tôi đem tận nơi trong nội ô Long Xuyên.</b></font>
                 </marquee>
@@ -49,7 +49,8 @@
             </div>
 
             <div class="menu-left" style="padding: 5px; display: flex; justify-content: center;"> 
-                <iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border-radius:8px;margin:0;padding:0;width:140px;height:150px;" src="https://www.clocklink.com/html5embed.php?clock=046&timezone=ACST&color=blue&size=256&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue"></iframe>
+                <!-- <iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border-radius:8px;margin:0;padding:0;width:140px;height:150px;" src="https://www.clocklink.com/html5embed.php?clock=046&timezone=ACST&color=blue&size=256&Title=&Message=&Target=&From=2021,1,1,0,0,0&Color=blue"></iframe> -->
+                 <iframe scrolling="no" frameborder="no" clocktype="html5" style="overflow:hidden;border:0;margin:0;padding:0;width:91px;height:30px;"src="https://www.clocklink.com/html5embed.php?clock=008&timezone=ACST&color=black&size=91&Title=&Message=&Target=&From=2026,1,1,0,0,0"></iframe>
             </div>
         </div>
 
@@ -82,7 +83,7 @@
         </div>
         
         <div id="footer">
-            <p style="text-align: center; line-height: 30px; margin: 0;">Thông tin bản quyền © 2026</p>
+            <p style="text-align: center; line-height: 30px; margin: 0;">minh vịt</p>
         </div>
     </div>
 </body>
