--- a/BuoiTH2/baitap/bai_7/bai7.html
+++ b/BuoiTH2/baitap/bai_7/bai7.html
@@ -10,7 +10,8 @@
 <body>
     <div id="main">
         <div id="head">
-            <img src="../images/banner-hoa.jpg" alt="Banner Hoa" style="width: 1000px; height: 100px; display: block;">
+            <img src="../images/banner-hoa.jpg" alt="Banner Hoa" 
+                style="width: 1000px; height: 100px; display: block;">
         </div>
 
         <div id="head-link">
@@ -68,12 +69,12 @@
             </div>
 
             <div class="san-pham">
-                <img src="../images/bong_nhieu_mau.jpg" alt="Hoa Tulip" style="width: 294px;">
+                <img src="../images/chauhoa.jpg" alt="Hoa Tulip" style="width: 294px;">
                 <p>Hoa Tulip</p>                
             </div>
 
             <div class="san-pham">
-                <img src="../images/hoa_hong.jpg" alt="Hoa Hồng" style="width: 294px;">
+                <img src="../images/hoa_la.jpg" alt="Hoa Hồng" style="width: 294px;">
                 <p>Hoa Hồng</p>
             </div>
         </div>
